force-app/main/default/objects/Free_Coupon__c/Free_Coupon__c.object-meta.xml
<CustomObject>
    <label>Free Coupon</label>
    <nameField>
        <displayFormat>COUPON-{000000000}</displayFormat>
        <label>Free Coupon Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Free Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>