force-app/main/default/objects/Free_Coupon__c/fields/ApplicationDealerCode__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDealerCode__c</fullName>
    <label>ApplicationDealerCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>