force-app/main/default/objects/Free_Coupon__c/fields/ApplicationPointCode__c.field-meta.xml
<CustomField>
    <fullName>ApplicationPointCode__c</fullName>
    <label>ApplicationPointCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>