force-app/main/default/objects/Free_Coupon__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Free Coupons</relationshipLabel>
    <relationshipName>Free_Coupons</relationshipName>
    <type>Lookup</type>
</CustomField>