force-app/main/default/objects/Free_Coupon__c/fields/Coupon_Application_No__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Application_No__c</fullName>
    <label>Coupon Application No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>