force-app/main/default/objects/Free_Coupon__c/fields/Frame_No__c.field-meta.xml
<CustomField>
    <fullName>Frame_No__c</fullName>
    <formula>Asset__r.Frame_Number__c</formula>
    <label>Frame No</label>
    <type>Text</type>
</CustomField>