force-app/main/default/objects/Free_Coupon__c/fields/FrameNoCouponCategoryLevel__c.field-meta.xml
<CustomField>
    <fullName>FrameNoCouponCategoryLevel__c</fullName>
    <formula>IF( !ISBLANK( Asset__r.Frame_Number__c)  &amp;&amp; !ISBLANK(Text(CouponCategoryLevel__c)) , Asset__r.Frame_Number__c + &apos;_&apos; + TEXT(CouponCategoryLevel__c) , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FrameNoCouponCategoryLevel</label>
    <type>Text</type>
</CustomField>