force-app/main/default/objects/Free_Coupon__c/fields/IMEI_Code__c.field-meta.xml
<CustomField>
    <fullName>IMEI_Code__c</fullName>
    <label>IMEI Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>