force-app/main/default/objects/Free_Coupon__c/fields/Message_type__c.field-meta.xml
<CustomField>
    <fullName>Message_type__c</fullName>
    <label>Message type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>