force-app/main/default/objects/Free_Coupon__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Free Coupons</relationshipLabel>
    <relationshipName>Free_Coupons</relationshipName>
    <type>Lookup</type>
</CustomField>