force-app/main/default/objects/Free_Coupon__c/fields/ServiceDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceDate__c</fullName>
    <label>ServiceDate</label>
    <type>Date</type>
</CustomField>