force-app/main/default/objects/Free_Coupon__c/fields/Sync_DMS__c.field-meta.xml
<CustomField>
    <fullName>Sync_DMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync DMS</label>
    <type>Checkbox</type>
</CustomField>