force-app/main/default/objects/Free_Coupon__c/fields/WarrantyEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>WarrantyEffectiveDate__c</fullName>
    <label>WarrantyEffectiveDate</label>
    <type>Date</type>
</CustomField>