force-app/main/default/objects/Free_Coupon__c/fields/WarrantyExpiredDate__c.field-meta.xml
<CustomField>
    <fullName>WarrantyExpiredDate__c</fullName>
    <label>WarrantyExpiredDate</label>
    <type>Date</type>
</CustomField>