force-app/main/default/objects/Free_Coupon__c/fields/WarrantyMileage__c.field-meta.xml
<CustomField>
    <fullName>WarrantyMileage__c</fullName>
    <label>WarrantyMileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>