force-app/main/default/objects/Free_Coupon__c/fields/WarrantyPolicyType__c.field-meta.xml
<CustomField>
    <fullName>WarrantyPolicyType__c</fullName>
    <label>WarrantyPolicyType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>